--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "@studio-freight/lenis": "^1.0.42",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.3",
+    "lucide-react": "0.358.0",
+    "@studio-freight/lenis": "1.0.42",
     "gsap": "^3.14.2",
-    "clsx": "^2.1.1"
+    "clsx": "2.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
