--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "lucide-react": "0.358.0",
+    "phosphor-react": "1.4.1",
     "@studio-freight/lenis": "1.0.42",
     "gsap": "^3.14.2",
     "clsx": "2.1.0"
